<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEE5F8"
    android:backgroundTint="#C7CDDF"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="405dp"
        android:layout_height="164dp"
        android:background="#203F59"
        android:backgroundTint="#1C578A"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tex_correo"
        android:textColor="#FBFAFA"
        android:textColorHighlight="@color/black"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="100dp"
        android:text="@string/tex_contraseña"
        android:textColor="#FBF8F8"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:layout_editor_absoluteY="34dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="114dp"
        android:layout_height="41dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="124dp"
        android:layout_height="38dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:layout_width="98dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:backgroundTint="#1665A5"
        android:text="@string/booton_Entrar"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPassword2"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Textview_Hasolvidadotucontraseña"
        android:textColor="#FBFAFA"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        tools:layout_editor_absoluteX="168dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="144dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/checkbox_Nocerrarsesion"
        android:textColor="#FDFBFB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/textview_Registrate"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/textview_esgratisyloseguirasiendo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview_Nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview_Apellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="76dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/textview_correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="79dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/textview_contraseñanueva"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:layout_editor_absoluteX="17dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/textview_sexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="79dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/textview_fechadenacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="217dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="98dp"
        android:layout_height="67dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="Masculino" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="Femenino" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/spinner8"
        android:layout_width="86dp"
        android:layout_height="22dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/spinner7"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/spinner9"
        android:layout_width="84dp"
        android:layout_height="23dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/spinner8"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="¿Por que tengo que dar informacion?"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:layout_editor_absoluteX="95dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#52C34A"
        android:text="@string/botton_Registrate"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:layout_editor_absoluteX="85dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Crear una pagina para un famoso, grupo de música o empresa"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_editor_absoluteX="11dp" />

</androidx.constraintlayout.widget.ConstraintLayout>